fix: horizontal scroll

--- a/src/components/HeaderMobileMenu/HeaderMobileMenu.css
+++ b/src/components/HeaderMobileMenu/HeaderMobileMenu.css
@@ -13,5 +13,5 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
 }
