--- a/src/components/HeaderNav/HeaderNav.css
+++ b/src/components/HeaderNav/HeaderNav.css
@@ -3,13 +3,13 @@
   display: flex;
   align-items: center;
   margin: 0;
-  width: 100vw;
+  width: 100%;
   justify-content: space-between;
 }
 
 .header-nav__links_mobile {
   height: 248px;
-  width: 100vw;
+  width: 100%;
   list-style: none;
   display: flex;
   flex-direction: column;
@@ -43,7 +43,7 @@
 .header-nav__links-container_mobile {
   flex-direction: column;
   align-items: flex-start;
-  width: 100vw;
+  width: 100%;
   padding: 0;
 }
 
